// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Reporting Restrictions Component should render when no reporting restrictions are present 1`] = `
<test-reporting-restrictions
  defendants="null"
>
  <reporting-restrictions>
  </reporting-restrictions>
</test-reporting-restrictions>
`;

exports[`Reporting Restrictions Component should render when no reporting restrictions are present 2`] = `
<test-reporting-restrictions
  defendants={[Function Array]}
>
  <reporting-restrictions>
  </reporting-restrictions>
</test-reporting-restrictions>
`;

exports[`Reporting Restrictions Component when reporting restrictions are present should render correctly in active mode 1`] = `
<test-reporting-restrictions
  defendants={[Function Array]}
  isActive={[Function Boolean]}
>
  <reporting-restrictions>
    <span
      class="reporting-restrictions-component"
    >
      <abbr
        class="pdk-!-border-color-white pdk-!-text-color-white"
        title="Reporting restrictions"
      >
         RR 
      </abbr>
    </span>
  </reporting-restrictions>
</test-reporting-restrictions>
`;

exports[`Reporting Restrictions Component when reporting restrictions are present should render correctly in warning mode 1`] = `
<test-reporting-restrictions
  defendants={[Function Array]}
  isWarning={[Function Boolean]}
>
  <reporting-restrictions>
    <span
      class="reporting-restrictions-component"
    >
      <abbr
        class="pdk-!-border-color-red pdk-!-text-color-red"
        title="Reporting restrictions"
      >
         RR 
      </abbr>
    </span>
  </reporting-restrictions>
</test-reporting-restrictions>
`;

exports[`Reporting Restrictions Component when reporting restrictions are present should render correctly when case id is provided 1`] = `
<test-reporting-restrictions
  caseId={[Function String]}
  defendants={[Function Array]}
>
  <reporting-restrictions>
    <span
      class="reporting-restrictions-component"
    >
      <a
        class="govuk-link govuk-body-m"
        href="http://app/url/prosecution-casefile/edit-case/case123#hearings-and-decisions"
        pdk-link=""
        pdk-typography="body"
        target="_blank"
      >
        <abbr
          class="pdk-!-border-color-black pdk-!-text-color-black"
          title="Reporting restrictions"
        >
           RR 
        </abbr>
      </a>
    </span>
  </reporting-restrictions>
</test-reporting-restrictions>
`;

exports[`Reporting Restrictions Component when reporting restrictions are present should render correctly when no case id is provided 1`] = `
<test-reporting-restrictions
  defendants={[Function Array]}
>
  <reporting-restrictions>
    <span
      class="reporting-restrictions-component"
    >
      <abbr
        class="pdk-!-border-color-black pdk-!-text-color-black"
        title="Reporting restrictions"
      >
         RR 
      </abbr>
    </span>
  </reporting-restrictions>
</test-reporting-restrictions>
`;
